Various bug fixes and style fixes, including some contrast fixes for AA rating.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -23,3 +23,8 @@ $cyan: #6cb2eb;
 $berserker_primary: #d8c59c;
 $berserker_secondary: #000000;
 $berserker_tertiary: #ebe8e1;
+
+// Bootstrap overrides
+$theme-colors: (
+  "success": #008600,
+);
